libs/common-lib/src/main/java/com/example/common/error/exception/package-info.java
@NullMarked
package com.example.common.error.exception;

import org.jspecify.annotations.NullMarked;
